# korpus-extractor

./: .gitignore  LICENSE  Makefile  README.md  dev.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: question.md
src/korpus_extractor/: __init__.py  __main__.py  aihub_extractor.py  extractor.py  extractor_factory.py  modu_extractor.py
src/korpus_extractor/configs/aihub/: 110.yaml  118.yaml  119.yaml  120.yaml  121.yaml  122.yaml  463.yaml  464.yaml  624.yaml  653.yaml  71343.yaml  86.yaml  87.yaml  89.yaml  90.yaml  92.yaml  93.yaml  94.yaml  95.yaml  96.yaml  97.yaml  99.yaml
src/korpus_extractor/configs/nikl/: dialogue_2020.yaml  dialogue_2021.yaml  dialogue_2022.yaml  korean-foreign_language_parallel_2021.yaml  korean-foreign_language_parallel_2022.yaml  korean_parliamentary_2021.yaml  messenger.yaml  newspaper.yaml  newspaper_2020.yaml  newspaper_2021.yaml  newspaper_2022.yaml  newspaper_2023.yaml  online_posting_materials_2022.yaml  online_text_message_2021.yaml  spoken.yaml  written.yaml
tests/test_example/: test_hello.py
